# das2Wasm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Test.js  index.html  vcpkg.json
Das2Wasm/: CMakeLists.txt  Das2Wasm.cpp  Das2Wasm.hpp  das2WasmEmbind.cpp  das2WasmEmbind.hpp  fftwInterface.hpp  helpers.hpp  schema.hpp
tests/wasm-tester/: package-lock.json  package.json  tsconfig.app.json
wasm-tester/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
wasm-tester/definitions/: vite-env.d.ts
wasm-tester/public/: 2023-08-27_2024-08-14_bin-60s.d3b
wasm-tester/src/: App.tsx  test.tsx  worker.ts
wasm-tester/src/parser/: Das2Wasm.mjs  DataParser.js  DataWorker.js  ParserFunctionInjector.ts  Schema.js  SchemaParser.js
wasm-tester/test/: mock_server.cjs  results.json  test.bench.ts  wasm-compare.bench.ts  wasm-compare.ts  wasm-load.test.js  wasm-load.test.ts  worker.test.ts
wasm-tester/test/data/: 2023-08-27_2024-08-14_bin-60s-small.d3b  2023-08-27_2024-08-14_bin-60s-tip.d3b  data.d3b  dataset.xml  fullHeader.xml  fullHeaderLarge.xml  schema.txt  stream.xml  tr-pre_ql_msc-sim_bac_2017-09-25-data.d3b  tr-pre_ql_msc-sim_bac_2017-09-25.cdf  tr-pre_ql_msc-sim_bac_2017-09-25.d3b
